--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>
-  {{title}}
-</h1>
+<input #inputNum type="number" value="0">
+<button (click)="click$.next(inputNum.value)">Update</button>
+<clock [time]="time | async"></clock>
